@@ -1,4 +1,5 @@
 0.2.0-next:
+ * start with a list of previously opened disk images
  * search history, and a setting to limit number of saved searches
 
 0.2.0:
